array.island.Island.scala.error
Erreur de compilation :
Island:7: error: identifier expected but integer literal found.
      if (num[i]<num[i+1])
                       ^Island:11: error: ']' expected but '}' found.
    }
    ^